--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
   path_provider: ^2.1.4
+  youtube_player_flutter: ^9.0.1
 
 dev_dependencies:
   build_runner: ^2.4.11
