--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.4.11
+  change_app_package_name: ^1.3.0
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
