--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
+  flutter_native_splash: ^2.4.1
   flutter_riverpod: ^2.5.1
   flutter_staggered_grid_view: ^0.7.0
   go_router: ^14.2.1
