--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ flutter_launcher_icons:
   image_path: "assets/icon/icon.png"
   min_sdk_android: 21
 
+flutter_native_splash:
+  color: "#252829"
+
 flutter:
   uses-material-design: true
 
